tests/ui/invalid_lvalue.pea
fn foo() {}

fn main() {
    foo() = 3;
    abc + bcd = 5;
}
